# deephamradiophy

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  report.py  test_spectral.py
output/: dc_penalty_3_decoder.pth  dc_penalty_3_encoder.pth  dc_penalty_3_learned_waveforms.sigmf-data  dc_penalty_3_learned_waveforms.sigmf-meta  experiment_1_decoder.pth  experiment_1_encoder.pth  experiment_1_learned_waveforms.sigmf-data  experiment_1_learned_waveforms.sigmf-meta  experiment_1_report.md  experiment_2_decoder.pth  experiment_2_encoder.pth  experiment_2_learned_waveforms.sigmf-data  experiment_2_learned_waveforms.sigmf-meta  experiment_2_report.md
