[project]
name = "deephamradiophy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "torch>=2.0.0",
    "torchview>=0.2.7",
    "tqdm>=4.67.1",
]

# PyTorch CUDA compatibility issue for your Nvidia GTX 970:
# switched the project to use PyTorch CUDA 11.8 builds,
# which still support the Maxwell architecture (compute capability 5.2).
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
